# XFingerCrack

./: .gitignore  AbstractQmlApplication_8hpp_source.html  AppInfo_8hpp_source.html  CMakeLists.txt  ConfigManager_8hpp_source.html  Doxyfile  FontManager_8hpp_source.html  README.md  TestHistory_8hpp_source.html  TestResult_8hpp_source.html  ThemeManager_8hpp_source.html  TranslationManager_8hpp_source.html  TypingTest_8hpp_source.html  WordGenerator_8hpp_source.html  XFingerCrackApplication_8hpp_source.html  annotated.html  annotated_dup.js  classAbstractQmlApplication-members.html  classAbstractQmlApplication.html  classAbstractQmlApplication.js  classAppInfo-members.html  classAppInfo.html  classAppInfo.js  classConfigManager-members.html  classConfigManager.html  classConfigManager.js  classFontManager-members.html  classFontManager.html  classFontManager.js  classTestHistory-members.html  classTestHistory.html  classTestHistory.js  classTestResult-members.html  classTestResult.html  classTestResult.js  classThemeManager-members.html  classThemeManager.html  classThemeManager.js  classTranslationManager-members.html  classTranslationManager.html  (+52 more)
.github/workflows/: docs.yml  release.yml
include/: AbstractQmlApplication.hpp  AppInfo.hpp  ConfigManager.hpp  FontManager.hpp  TestHistory.hpp  TestResult.hpp  ThemeManager.hpp  TranslationManager.hpp  TypingTest.hpp  WordGenerator.hpp  XFingerCrackApplication.hpp
qml/: main.qml
qml/components/: HistoryBestResultItem.qml  HistoryBestResults.qml  HistoryDateSeparator.qml  HistoryRecentTestItem.qml  HistoryRecentTests.qml  HistoryRecentTestsFilter.qml  HistoryStatCard.qml  HistoryStatistics.qml  HistoryStatsCard.qml  HistorySummaryStats.qml  HistoryTestItem.qml  LoadingIndicator.qml  ModalDialog.qml  ResponsiveConfig.qml  ResultSummary.qml  ResultTypedText.qml  ResultWPMOverTime.qml  SettingsItem.qml  SettingsOptionItem.qml  TextWithFont.qml  ThemedToolTip.qml  Toolbar.qml  TypingArea.qml
qml/pages/: About.qml  History.qml  ResultsScreen.qml  Settings.qml
resources/: XFingerCrack.desktop  icon.rc  resources.qrc  themes.json
resources/sounds/: README.md
resources/translations/: translation_de_DE.qm  translation_de_DE.ts  translation_en_US.qm  translation_en_US.ts  translation_tr_TR.qm  translation_tr_TR.ts
resources/wordlist/: README.md  code_c++.json  english.json  french.json  german.json  spanish.json  turkish.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+24 more)
src/: AbstractQmlApplication.cpp  AppInfo.cpp  ConfigManager.cpp  FontManager.cpp  TestHistory.cpp  TestResult.cpp  ThemeManager.cpp  TranslationManager.cpp  TypingTest.cpp  Version.hpp.in  WordGenerator.cpp  XFingerCrackApplication.cpp  main.cpp
tests/: populate_testdb.cpp  test_configmanager.cpp  test_main.cpp  test_testhistory.cpp  test_typingtest.cpp  test_wordgenerator.cpp
